cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_450.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/speed.c:3271: error: DEAD_STORE
  The value written to &rsa_count (type long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/speed.c:3271:13: Write of unused value
3269.               BIO_printf(bio_err, "EdDSA failure.\n");
3270.               ERR_print_errors(bio_err);
3271.               rsa_count = 1;
                    ^
3272.           } else {
3273.               for (i = 0; i < loopargs_len; i++) {
